Change log for zeit.web
=======================

1.72 (unreleased)
-----------------

- HOTFIX: Make zeit.web modules work with `select_modules` API

- ZON-1848: Repair Netiquette link


1.71.1 (2015-09-13)
-------------------

- HOTFIX: Make legacy areas work with `select_modules` API


1.71 (2015-09-13)
-----------------

- ZON-2126: Debounce certain action on comment interface

- ZON-2215: Display article images according to `display_mode` of their layout

- ZON-2069: Refactor topic teaser

- FIX: Position of adtile #2

- FIX: Defected keyword page header

- FIX: Wrong font in advertorial footer

- MAINT: Polish search submit button, breadcrumb and metadata separator

- ZON-2203: Add static cardstack parameter on CPs

- ZON-2090: Rearrange sources on article meta line

- ZON-2118: First stab at teaser for storystreams on CPs


1.70 (2015-09-13)
-----------------

- FIX: Decode sso cookie from API


1.69 (2015-09-12)
-----------------

- MAINT: Update modernizr to v3.0.0

- ZON-2083: Larger article images for twitter & facebook meta

- ZON-2205: Change URL to cached version of adcontroller

- ZON-2177: Rework Meetrics structure for teasers

- ZON-2123: Show topic links on homepage exclusively

- QUICKFIX: Fix images to endure new fallback image URL

- QUCIKFIX: Don't show nextread on video pages


1.68 (2015-09-12)
-----------------

- ZON-2109: Add SEO meta links for dynamic cps

- MAINT: Polish portraitbox, large teaser headlines on mobile,
         advertising background-color and servicebox link styles

- ZON-1892: Add Buzz-Board

- ZON-2197: Allow specifying a host, not just a path, for ``asset_prefix``

- ZON-2014: Enforce mobile image display

- MAINT: Update x-styles

- QUICKFIX: Make Keywordpage Titel to h1

- HOTFIX: Show comment moderation only for moderators


1.67 (2015-09-11)
-----------------

- ZON-2056: Add links in comments for community moderators

- ZON-2143: Canonical-URL should omit params & hashes
