@@ -8,6 +8,8 @@ Change log for zeit.web
 
 - ZON-1848: Repair Netiquette link
 
+- ZON-2217: Repair missing keyword links
+
 
 1.71.1 (2015-09-13)
 -------------------
